[package]
name = "rpcn"
version = "1.3.0"
authors = ["RipleyTom <RipleyTom@users.noreply.github.com>"]
edition = "2021"

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8"
rust-argon2 = "1.0"
flatbuffers = "24.3.25"
parking_lot = "0.12"
libsqlite3-sys = "0.25"
rusqlite = { version = "0.28", features = [ "bundled" ] }
r2d2 = "0.8"
r2d2_sqlite = "0.21"
tokio = { version = "1.18", features = [ "full" ] }
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
socket2 = { version = "0.4", features = [ "all" ] }
lettre = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = [ "vendored" ] }
hyper = { version = "1.1", features = [ "full" ] }
hyper-util = { version = "0.1", features = ["full"] }
